# vizor-wallet

./: .fvmrc  .gitattributes  .gitignore  .metadata  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  analysis_options.yaml  build-vizor  clear-app-macos.sh  clear-app.sh  docker-compose.zcash-regtest-expiry.yml  docker-compose.zcash-regtest.yml  flutter_rust_bridge.yaml  pubspec.yaml  run-regtest-rust-tests.sh  widgetbook.sh
.cargo/: config.toml
.github/workflows/: dispatch-macos-release.yml
android/app/: build.gradle.kts
docs/: voting-bundle-indexed-spec.md  voting-demo-scope.md  voting-demo-script.md  voting-sdk-compatibility.md
fastlane/: Fastfile  Matchfile
fastlane/common/: release.rb
fastlane/linux/: Fastfile  README.md
fastlane/macos/: Fastfile  README.md
fastlane/patches/: developer_id_application_certificate_type_patch.rb
fastlane/windows/: Fastfile
integration_test/: regtest_custom_endpoint_no_fallback_test.dart  regtest_fallback_endpoint_test.dart  regtest_import_sync_test.dart  regtest_mempool_receive_history_test.dart  regtest_multi_account_send_test.dart  regtest_shield_transparent_retry_test.dart  regtest_shield_transparent_test.dart  regtest_slow_height_fallback_test.dart  simple_test.dart
integration_test/support/: regtest_lightwalletd_proxy.dart
ios/: SyncWidgetExtension.entitlements
ios/Runner/: AppDelegate.swift  BackgroundSyncManager.swift  DynamicIslandManager.swift  Info.plist  LiveActivitiesAppAttributes.swift  LiveActivityManager.swift  RpcEndpointConfigStore.swift  SyncProgressStreamHandler.swift  TxTrackManager.swift  WalletPathResolver.swift  zcash_sync.h
ios/Runner.xcodeproj/: project.pbxproj
ios/SyncWidget/: LiveActivitiesAppAttributes.swift  SyncWidgetBundle.swift  SyncWidgetLiveActivity.swift
lib/: app.dart  main.dart  swap_preview.dart  widgetbook.dart
lib/src/: app_bootstrap.dart
lib/widgetbook/: activity_use_cases.dart  address_book_use_cases.dart  button_use_cases.dart  color_swatch.dart  color_use_cases.dart  context_menu_use_cases.dart  icon_use_cases.dart  screen_use_cases.dart  swap_use_cases.dart  text_field_use_cases.dart  toast_use_cases.dart  token_use_cases.dart  typography_use_cases.dart  widgetbook_app.dart
linux/: CMakeLists.txt  vizor.desktop.in
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
onboarding/: address.html  api-reference.html  architecture.html  background-sync.html  dart-layer.html  dev-commands.html  gotchas.html  index.html  keystone.html  rust-core.html  sync-engine.html  testing.html
protos/: compact_formats.proto  service.proto
release_notes/: README.md  v0.0.17.md  v0.0.18.md  v0.0.19.md  v0.0.20.md  v0.0.21.md  v0.0.22.md  v0.0.23.md  v0.0.26.md  v0.0.27.md  v0.0.28.md  v0.0.29.md
rust/: Cargo.toml  QR_PHASE1.md  cargokit.yaml
rust/examples/: regtest_wallet_addresses.rs
rust/src/: ffi.rs  frb_generated.rs  lib.rs
rust/src/api/: keystone.rs  mod.rs  simple.rs  sync.rs  voting.rs  voting_helpers.rs  wallet.rs
rust/src/wallet/: db.rs  exchange_address.rs  keys.rs  keystone.rs  mod.rs  network.rs  secret_store.rs  sync.rs  sync_engine.rs  tor.rs  voting.rs
rust/src/wallet/sync/: broadcast.rs  migration.rs  mod.rs  pczt.rs  send.rs  transactions.rs
rust/src/wallet/sync_engine/: block_source.rs  enhance.rs  error.rs  lwd.rs  mempool.rs  mod.rs
rust/src/wallet/voting/: README.md  bundle.rs  db.rs  delegation.rs  endorsement.rs  endpoint_validation.rs  hotkey.rs  mod.rs  network.rs  progress.rs  recovery.rs  state.rs  test_support.rs  tree_sync.rs  types.rs  vote.rs  workflow.rs
rust/tests/: regtest_exchange_shielding.rs  regtest_import.rs  regtest_multi_account.rs  regtest_receive_sync.rs  regtest_send.rs  regtest_wallet_flow.rs  testnet_qr_phase1.rs
rust/tests/common/: mod.rs
rust_builder/ios/: rust_lib_zcash_wallet.podspec
scripts/: build-linux-release.sh  figma-export.js  generate-windows-update-feed-key.ps1  package-linux-appimage.sh  package-macos-release-dmg.sh  package-windows-velopack.ps1
scripts/e2e/: flutter-macos-regtest-custom-endpoint-no-fallback.sh  flutter-macos-regtest-fallback-endpoint.sh  flutter-macos-regtest-full.sh  flutter-macos-regtest-import-sync.sh  flutter-macos-regtest-mempool-during-sync.sh  flutter-macos-regtest-mempool-expiry.sh  flutter-macos-regtest-mempool-receive-history.sh  flutter-macos-regtest-multi-account-send.sh  flutter-macos-regtest-shield-transparent-retry.sh  flutter-macos-regtest-shield-transparent.sh  flutter-macos-regtest-slow-height-fallback.sh  mempool-receive-history-driver.py  swap-one-click-live-app.sh
scripts/regtest/: down.sh  fund-wallet-unmined.sh  fund-wallet.sh  lib.sh  lightwalletd-zcash.conf  mine-to-expiry.sh  mine.sh  prepare-unmined-faucet.sh  reset.sh  tx-expiry-height.sh  up.sh  zcash-expiry.conf  zcash.conf
test/: activity_row_mapper_test.dart  activity_table_pagination_test.dart  activity_table_row_test.dart  app_bootstrap_test.dart  app_loading_icon_test.dart  app_main_sidebar_test.dart  app_swap_feature_test.dart  sync_failure_test.dart  sync_state_test.dart  transaction_receipt_view_test.dart  zcash_explorer_test.dart  zec_amount_test.dart
test/core/: account_name_policy_test.dart  profile_pictures_test.dart
test/fakes/: fake_sync_notifier.dart
test/providers/: account_models_test.dart  account_provider_test.dart  linux_update_provider_test.dart  rpc_endpoint_failover_provider_test.dart  rpc_endpoint_latency_provider_test.dart  sync_provider_test.dart  voting_config_source_provider_test.dart  wallet_mutation_guard_test.dart
test/services/: camera_preference_store_test.dart  qr_scanner_test.dart
test/tool/: swap_one_click_probe_test.dart
test/widgetbook/: activity_use_cases_test.dart  address_book_use_cases_test.dart  swap_status_use_cases_test.dart
windows/: CMakeLists.txt
(+438 files in other folders)
