[package]
name = "rust_lib_zcash_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# Zcash core
zcash_primitives = { version = "0.28", git = "https://github.com/valargroup/librustzcash", rev = "eba70e327a37eb4e7c15608f9b78f7bf02dff74d" }
zcash_address = { version = "0.12", git = "https://github.com/valargroup/librustzcash", rev = "eba70e327a37eb4e7c15608f9b78f7bf02dff74d" }
zcash_keys = { version = "0.14", git = "https://github.com/valargroup/librustzcash", rev = "eba70e327a37eb4e7c15608f9b78f7bf02dff74d", features = ["orchard"] }
zcash_protocol = { version = "0.9", git = "https://github.com/valargroup/librustzcash", rev = "eba70e327a37eb4e7c15608f9b78f7bf02dff74d" }
transparent = { package = "zcash_transparent", version = "0.8", git = "https://github.com/valargroup/librustzcash", rev = "eba70e327a37eb4e7c15608f9b78f7bf02dff74d" }
zcash_script = "0.4.3"
zcash_client_backend = { version = "0.23", git = "https://github.com/valargroup/librustzcash", rev = "eba70e327a37eb4e7c15608f9b78f7bf02dff74d", features = [
    "orchard",
    "transparent-inputs",
    "lightwalletd-tonic",
    "lightwalletd-tonic-tls-webpki-roots",
    "sync",
    "pczt",
] }
zcash_client_sqlite = { version = "0.21", git = "https://github.com/valargroup/librustzcash", rev = "eba70e327a37eb4e7c15608f9b78f7bf02dff74d", features = ["orchard", "transparent-inputs", "unstable", "serde"] }
# Voting clients need PIR lookup support and vote-commitment-tree sync.
zcash_voting = { git = "https://github.com/valargroup/zcash_voting", rev = "1942eac09e76940f2d4a933496d5f0d82790ac99", package = "zcash_voting" }
# Must match versions used by zcash_client_sqlite to avoid type conflicts
orchard = { version = "0.14", git = "https://github.com/valargroup/qr_orchard", branch = "ironwood-qr" }
sapling-crypto = { version = "0.7", default-features = false, features = ["circuit"] }
uuid = "1.1"
zip32 = "0.2"
pasta_curves = "0.5"
ff = "0.13"
# Required by no-op Sapling prover trait impls
jubjub = "0.10"
bls12_381 = "0.8"
rand_core = "0.6"

# Proofs
zcash_proofs = { version = "0.28", git = "https://github.com/valargroup/librustzcash", rev = "eba70e327a37eb4e7c15608f9b78f7bf02dff74d" }

# Key generation
bip0039 = "0.12"

# Serialization
nonempty = "0.11"
minicbor = "0.19"
prost = "0.14"
incrementalmerkletree = "0.8"
shardtree = "0.6"

# Security
secrecy = "0.8"
zeroize = "1"
aes = { version = "0.8", features = ["zeroize"] }
aes-gcm = { version = "0.10", features = ["zeroize"] }
base64 = "0.22"
pbkdf2 = "0.12"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

# Random number generation
rand = "0.8"

# Async runtime & gRPC
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
tonic = { version = "0.14", features = ["channel", "tls-webpki-roots", "tls-ring"] }
# rustls is in the graph transitively via tonic; make it a direct dep
# so we can explicitly install the ring CryptoProvider in `init_app`.
# Without an explicit provider install, rustls 0.23+ panics the first
# TLS handshake with "no process-level CryptoProvider installed".
rustls = "0.23"

# SQLite (re-exported by zcash_client_sqlite but needed for Connection type)
rusqlite = "0.37"

# Logging (FRB forwards to Dart console via setup_default_user_utils)
log = "0.4"

# Hex encoding
hex = "0.4"

# Keystone hardware wallet
ur = { git = "https://github.com/KeystoneHQ/ur-rs", tag = "0.3.3" }
pczt = { version = "0.7", git = "https://github.com/valargroup/librustzcash", rev = "eba70e327a37eb4e7c15608f9b78f7bf02dff74d", features = ["orchard", "io-finalizer", "signer", "zcp-builder"] }
ur-registry = { git = "https://github.com/KeystoneHQ/keystone-sdk-rust", package = "ur-registry", default-features = false, features = ["std"] }
serde_json = "1"
url = "2.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3.7", features = ["OSX_10_15"] }

[dev-dependencies]
tempfile = "3"
hex = "0.4"
vote-commitment-tree = { git = "https://github.com/valargroup/zcash_voting", rev = "1942eac09e76940f2d4a933496d5f0d82790ac99", package = "vote-commitment-tree" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)', 'cfg(zcash_unstable, values("nu7"))'] }

# Flutter debug builds use Cargokit + Cargo's dev profile (`cargo build`
# without `--release`). Rust crypto and voting flows are slow under the default
# debug opt-level=0, so keep debug assertions and symbols while making local
# Flutter/debug voting builds usable. Release builds are unaffected by this
# profile.
[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
